[package]
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"
name = "ember"
version = "0.1.0"
default-run = "client"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ember_cli = {path = "crates/ember_cli"}
ember_client = {path = "crates/ember_client"}

pretty_env_logger = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = 'thin'
