[package]
authors = ["Aaron Housh <dispersias@gmail.com>"]
default-run = "client"
edition = "2018"
name = "ember"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ember_cli = {path = "crates/ember_cli"}
ember_client = {path = "crates/ember_client"}
ember_server = {path = "crates/ember_server"}

pretty_env_logger = "0.4"

[profile.dev]
debug = false
opt-level = 3

[profile.release]
codegen-units = 1
lto = 'thin'
